scripts/cpfs/installer_scripts/networkpolicy/egress/zen-egress-diagnostics-job.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-diagnostics-job
  namespace: "zenNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      icpdsupport/app: "diagnostics-job"
  policyTypes:
  - Egress
  egress:
  - {}
