scripts/cpfs/installer_scripts/networkpolicy/egress/zen-egress-iam-config-job.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-iam-config-job
  namespace: "zenNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      component: "iam-config-job"
  policyTypes:
  - Egress
  egress:
  - {}
