scripts/cpfs/installer_scripts/networkpolicy/egress/zen-egress-nginx-tester.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-nginx-tester
  namespace: "zenNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      component: "ibm-nginx-tester"
  policyTypes:
  - Egress
  egress:
  - {}
