scripts/cpfs/installer_scripts/networkpolicy/egress/zen-egress-usermgmt.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-usermgmt
  namespace: "zenNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      component: "usermgmt"
  policyTypes:
  - Egress 
  egress:
  - {}
