scripts/cpfs/installer_scripts/networkpolicy/egress/zen-egress-volumes.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-volumes
  namespace: "zenNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      icpdsupport/app: volumes
  policyTypes:
  - Egress
  egress:
  - {}
