scripts/cpfs/installer_scripts/networkpolicy/egress/zen-egress-watchdog-cronjob.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-watchdog-cronjob
  namespace: "zenNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      icpdsupport/app: "watchdog-cronjob"
  policyTypes:
  - Egress
  egress:
  - {}
