scripts/cpfs/installer_scripts/networkpolicy/egress/zen-egress-zen-metastore-backup-cron-job.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-zen-metastore-backup-cron-job
  namespace: "zenNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      component: "zen-metastore-backup-cron-job"
  policyTypes:
  - Egress
  egress:
  - {}
