scripts/cpfs/installer_scripts/networkpolicy/egress/zen-egress-zen-pre-requisite-job.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-zen-pre-requisite-job
  namespace: "zenNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      component: "zen-pre-requisite-job"
  policyTypes:
  - Egress
  egress:
  - {}
